fix overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ nav ul li {
 }
 
 hr {
-	width: 100%;
+	margin: 0;
 	border: 1px solid #21345D;
 }
 
